--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apollo-server": "^3.6.3",
     "apollo-server-express": "^3.6.3",
     "graphql": "^16.3.0",
+    "lodash": "^4.17.21",
     "nodemon": "^2.0.15"
   }
 }
